--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/dental.css">
-    <link rel="stylesheet" href="/css/screens.css">
+    <link rel="stylesheet" href="screens.css">
+    <link rel="stylesheet" href="dental.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <title>Ben</title>
 </head>
@@ -44,5 +44,5 @@
     </div>
 </div>
 </body>
-   <script src="/js/dental.js"></script>
+   <script src="dental.js"></script>
 </html>
