--- a/index.html
+++ b/index.html
@@ -38,11 +38,22 @@
     
 </nav>
 
-<div class="body">
-    <div>
+    <div></div>
+   <section class="herosec container">
+    <div class="l-set "><img src="/assets/dentallogo1.png" alt=""></div>
+
+
+    <div m-set><h1><span>Dental </span> Clinic <span class="spanimg"><img src="/assets/spanimg.png" alt=""></span> That <br>You Can Trust</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+
         
     </div>
-</div>
+
+
+    <div class="r-set"><img src="/assets/dentallogo2.png" alt=""></div>
+   </section>
+
 </body>
    <script src="dental.js"></script>
 </html>
