--- a/index.html
+++ b/index.html
@@ -43,10 +43,16 @@
     <div class="l-set "><img src="/assets/dentallogo1.png" alt=""></div>
 
 
-    <div m-set><h1><span>Dental </span> Clinic <span class="spanimg"><img src="/assets/spanimg.png" alt=""></span> That <br>You Can Trust</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
-
+    <div m-set>
+        <div>
+            <h1><span>Dental </span> Clinic <span class="spanimg"><img src="/assets/spanimg.png" alt=""></span> That <br>You Can Trust</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+        </div>
+        <div class="sec-btns">
+            <button>View Services</button>
+            <button>Schedule a Call</button>
+        </div>
         
     </div>
 
