--- a/index.html
+++ b/index.html
@@ -81,9 +81,13 @@
     </div>
 </section>
 <section>
-    <div>
+    <div class="sec-2">
         <h1>Our Dental Services</h1>
-        <div></div>
+        <div class="sec-2cc">
+            <div class="sec-2card"></div>
+            <div class="sec-2card"></div>
+            <div class="sec-2card"></div>
+        </div>
         <button>View All Services</button>
     </div>
 </section>
