--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             
         </div>
         <div class="sec-btns">
-            <button>View Services</button>
-            <button>Schedule a Call</button>
+            <button class="btn">View Services</button>
+            <button class="btn">Schedule a Call</button>
         </div>
         
     </div>
@@ -82,9 +82,13 @@
 </section>
 <section>
     <div class="sec-2">
-        <h1>Our Dental Services</h1>
+        <h1 class="sec2h1">Our Dental Services</h1>
         <div class="sec-2cc">
-            <div class="sec-2card"></div>
+            <div class="sec-2card">
+                <h4>Dental Exams</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, ullam error nisi qui quo sapiente.</p>
+                <button class="btn">Learn More</button>
+            </div>
             <div class="sec-2card"></div>
             <div class="sec-2card"></div>
         </div>
