--- a/index.html
+++ b/index.html
@@ -132,6 +132,11 @@
     </div>
     <img src="./dm1.png" alt="">
 </section>
+
+<section class="sec-2 sec-4" >
+    <h1 class="sec2h1">Our Dental Team is Reasdy <br>to Assist You</h1>
+
+</section>
   
 
 </body>
