--- a/index.html
+++ b/index.html
@@ -133,9 +133,27 @@
     <img src="./dm1.png" alt="">
 </section>
 
-<section class="sec-2 sec-4" >
+<section class="sec-4" >
     <h1 class="sec2h1">Our Dental Team is Reasdy <br>to Assist You</h1>
+    <div class="sec-4cc">
+        <div class="sec-4c">
+            <img src="dim2.png" alt="">
+            <h4>Dr. Yeboah Bernard</h4>
+            <p>Dental Surgeon</p>
+        </div>
 
+        <div class="sec-4c">
+            <img src="dim2.png" alt="">
+            <h4>Dr. Yeboah Bernard</h4>
+            <p>Dental Surgeon</p>
+        </div>
+
+        <div class="sec-4c">
+            <img src="dim2.png" alt="">
+            <h4>Dr. Yeboah Bernard</h4>
+            <p>Dental Surgeon</p>
+        </div>
+    </div>
 </section>
   
 
