--- a/index.html
+++ b/index.html
@@ -138,20 +138,20 @@
     <div class="sec-4cc">
         <div class="sec-4c">
             <img src="dim2.png" alt="">
-            <h4>Dr. Yeboah Bernard</h4>
-            <p>Dental Surgeon</p>
+            <h4 text >Dr. Yeboah Bernard</h4>
+            <p text>Dental Surgeon</p>
         </div>
 
         <div class="sec-4c">
             <img src="dim2.png" alt="">
-            <h4>Dr. Yeboah Bernard</h4>
-            <p>Dental Surgeon</p>
+            <h4 text>Dr. Yeboah Bernard</h4>
+            <p text >Dental Surgeon</p>
         </div>
 
         <div class="sec-4c">
             <img src="dim2.png" alt="">
-            <h4>Dr. Yeboah Bernard</h4>
-            <p>Dental Surgeon</p>
+            <h4 text >Dr. Yeboah Bernard</h4>
+            <p text >Dental Surgeon</p>
         </div>
     </div>
 </section>
