--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </nav>
 
     
-   <section class="herosec container-sm">
+   <section class="herosec">
     <div class="l-set "><img src="dentallogo1.png" alt=""></div>
 
 
