--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
     <div m-set>
-        <div>
+        <div class="ch">
             <h1><span>Dental </span> Clinic <span class="spanimg"><img src="spanimg.png" alt=""></span> That <br>You Can Trust</h1>
             <p>Our Dental Clinic offers care for our smile. We provide expect treatments and <br> personalized service to ensure your oral health shine with confindence. </p>
             
