--- a/index.html
+++ b/index.html
@@ -171,6 +171,18 @@
         </div>
     </div>
 </section>
+
+<section class="sec-5">
+    <div class="sec-5c">
+        <div>
+            <img src="/cdimg1.png" alt="">
+        </div>
+        
+        <div>
+            hfjdfkjdfklfdk
+        </div>
+    </div>
+</section>
 </body>
    <script src="dental.js"></script>
 </html>
